--- a/source/style/less/variables.less
+++ b/source/style/less/variables.less
@@ -5,7 +5,9 @@
 @primary: #01A9DB;
 @accent: #FF00FF;
 @regular: #A4A4A4;
-@disable: #E6E6E6;
+// @disable: #E6E6E6;
+@disable: #E6E;
+
 
 @white: #FFFFFF;
 @black: #000000;
