--- a/source/style/css/main.css
+++ b/source/style/css/main.css
@@ -1,1 +1,1 @@
-.text-danger{color:#fe2e2e}.text-warning{color:#ff8000}.text-success{color:#3adf00}.text-primary{color:#01a9db}.text-accent{color:#f0f}.text-regular{color:#a4a4a4}.text-disable{color:#e6e6e6}.text-white{color:#fff}.text-black{color:#000}.text-gray{color:#a4a4a4}
+.text-danger{color:#fe2e2e}.text-warning{color:#ff8000}.text-success{color:#3adf00}.text-primary{color:#01a9db}.text-accent{color:#f0f}.text-regular{color:#a4a4a4}.text-disable{color:#e6e111}.text-white{color:#fff}.text-black{color:#000}.text-gray{color:#a4a4a4}
