--- a/source/style/less/variables.less
+++ b/source/style/less/variables.less
@@ -5,8 +5,8 @@
 @primary: #01A9DB;
 @accent: #FF00FF;
 @regular: #A4A4A4;
-// @disable: #E6E6E6;
-@disable: #E6E;
+@disable: #E6E6E6;
+@disable: #E6E111;
 
 
 @white: #FFFFFF;
