--- a/source/style/less/main.less
+++ b/source/style/less/main.less
@@ -1,2 +1,10 @@
 @import 'variables.less';
 @import 'typing.less';
+@import 'base.less';
+@import 'navigation.less';
+
+
+//test styles
+#header, #footer, #main {
+    // border: 1px solid black;
+}
