--- a/source/style/less/typing.less
+++ b/source/style/less/typing.less
@@ -29,3 +29,15 @@
 .text-gray {
     color: @gray;
 }
+.text-left {
+    text-decoration: left;
+}
+.text-right {
+    text-align: right;
+}
+.text-center {
+    text-align: center;
+}
+.text-uppercase {
+    text-transform: uppercase;
+}
