* added styles for components

--- a/source/style/less/main.less
+++ b/source/style/less/main.less
@@ -1,8 +1,13 @@
-@import 'variables.less';
-@import 'typing.less';
-@import 'base.less';
-@import 'navigation.less';
-@import 'icons.less';
+@import 'components/variables.less';
+@import 'components/mixins.less';
+@import 'components/typing.less';
+@import 'components/base.less';
+@import 'components/navigation.less';
+@import 'components/icons.less';
+@import 'components/buttons.less';
+@import 'components/header.less';
+@import 'components/main.less';
+@import 'components/footer.less';
 
 
 //test styles
