--- a/source/style/less/main.less
+++ b/source/style/less/main.less
@@ -8,6 +8,7 @@
 @import 'components/header.less';
 @import 'components/main.less';
 @import 'components/footer.less';
+@import 'components/grid.less';
 
 
 //test styles
