* added aside with action menu and styles for it, added styles for navigation

--- a/source/style/less/components/base.less
+++ b/source/style/less/components/base.less
@@ -7,9 +7,5 @@ html, body {
 
 html {
     background: @main-bg-color;
+    position: relative;
 }
-
-//demo styles
-// div {
-//     margin-bottom: 10px;
-// }
