--- a/source/style/less/main.less
+++ b/source/style/less/main.less
@@ -9,6 +9,7 @@
 @import 'components/main.less';
 @import 'components/footer.less';
 @import 'components/grid.less';
+@import 'components/aside.less';
 
 
 //test styles
