--- a/source/style/less/components/main.less
+++ b/source/style/less/components/main.less
@@ -1,13 +1,10 @@
 #main {
-    padding-bottom: 20px;
+    // padding: 0 0 20px 0;
     .action-menu, .content {
         padding-left: 10px;
         padding-right: 10px;
     }
-    .action-menu {
-        width: 150px;
-    }
     .content {
-
+        width: calc(~'100% - 150px');
     }
 }
