--- a/source/style/less/main.less
+++ b/source/style/less/main.less
@@ -6,7 +6,7 @@
 @import 'components/icons.less';
 @import 'components/buttons.less';
 @import 'components/header.less';
-@import 'components/main.less';
+@import 'components/content.less';
 @import 'components/footer.less';
 @import 'components/grid.less';
 @import 'components/aside.less';
