--- a/source/style/less/components/variables.less
+++ b/source/style/less/components/variables.less
@@ -1,3 +1,9 @@
+//mediapoints
+@desktop-hd-point:  1200px;
+@desktop-point:     992px;
+@tablet-point:      768px;
+@mobile-point:      480px;
+
 //colors
 @danger: #FE2E2E;
 @warning: #FF8000;
