--- a/source/style/less/main.less
+++ b/source/style/less/main.less
@@ -10,7 +10,8 @@
 @import 'components/footer.less';
 @import 'components/grid.less';
 @import 'components/aside.less';
-
+@import 'components/card.less';
+@import 'components/tables.less';
 
 //test styles
 #header, #footer, #main {
