--- a/source/style/less/components/buttons.less
+++ b/source/style/less/components/buttons.less
@@ -17,6 +17,8 @@
 * {
     .btn {
         margin: 3px;
+        white-space: nowrap;
+        text-decoration: none;
         border: none;
         outline: none;
         cursor: pointer;
