--- a/source/style/less/components/header.less
+++ b/source/style/less/components/header.less
@@ -1,7 +1,10 @@
 #header {
-    padding: 10px;
+    padding: 5px 10px 0;
+    background: darken(@main-bg-color, 5%);
     .logo-wrapper {
         margin-right: 20px;
+        z-index: 20;
+        position: relative;
         .logo {
             display: inline-block;
             width: 50px;
