--- a/source/style/less/components/footer.less
+++ b/source/style/less/components/footer.less
@@ -2,8 +2,9 @@
     position: fixed;
     bottom: 0;
     left: 0;
+    padding: 5px 0;
     width: 100%;
-    height: 20px;
-    margin-top: -20px;
-    background: @main-bg-color;
+    height: 30px;
+    margin-top: -30px;
+    background: darken(@main-bg-color, 5%);
 }
