* improved styles for card * improved styles for grid * more pretty visualization of data

--- a/source/style/less/components/grid.less
+++ b/source/style/less/components/grid.less
@@ -17,3 +17,14 @@
         clear: both;
     }
 }
+
+.row {
+    .clearfix;
+}
+
+.container {
+    width: 100%;
+    margin: auto;
+    @media ( min-width: @tablet-point ) { max-width: 1440px; }
+
+}
