--- a/source/style/less/components/card.less
+++ b/source/style/less/components/card.less
@@ -10,6 +10,9 @@
         margin-bottom: 20px;
         padding-bottom: 5px;
     }
+    .card-content {
+        margin-bottom: 10px;
+    }
     &.card-50 {
         width: calc(~'100% - @{gutter-width} * 2');
         @media ( min-width: @tablet-point ) { width: calc(~'50% - @{gutter-width} * 2'); }
